@@ -56,6 +56,11 @@ PageHeadState {
                 if (state === "default") {
                     searchField.text = ""
                 }
+
+                // FIXME: Workaround for pad.lv/1514143 (keyboard show/hide on view moving)
+                // by locking the header and forcing a topMargin of page to the header height
+                headerState.head.locked = state === headerState.name;
+                thisPage.anchors.topMargin = state === headerState.name ? units.gu(6.125) : 0
             }
 
             onVisibleChanged: {
