@@ -12,6 +12,7 @@ music-app (2.2ubuntu2) UNRELEASED; urgency=medium
 
   [ Andrew Hayzen ]
   * Switch to using the new uc1.3 listitems within the SDK
+  * Workaround for bug 1514143 by locking the header when searching (LP: #1514143)
 
  -- Bartosz Kosiorek <gang65@poczta.onet.pl>  Tue, 08 Sep 2015 10:08:49 +0200
 
